--- a/configure.ac
+++ b/configure.ac
@@ -32,8 +32,8 @@ AC_PROG_CC
 AC_PROG_INSTALL
 
 # Checks for pkg-config packages
-PKG_CHECK_MODULES(DEP, x11 xxf86dga)
-AC_SUBST(DEP_CFLAGS)
-AC_SUBST(DEP_LIBS)
+PKG_CHECK_MODULES(XF86DGA, x11 xxf86dga)
+AC_SUBST(XF86DGA_CFLAGS)
+AC_SUBST(XF86DGA_LIBS)
 
 AC_OUTPUT([Makefile])
