--- a/configure.ac
+++ b/configure.ac
@@ -22,7 +22,7 @@ dnl
 dnl Process this file with autoconf to create configure.
 
 AC_PREREQ([2.57])
-AC_INIT(xf86dga,[7.0], [xorg@freedesktop.org],xf86dga)
+AC_INIT(xf86dga,[0.99.0], [https://bugs.freedesktop.org/enter_bug.cgi?product=xorg],xf86dga)
 AM_INIT_AUTOMAKE([dist-bzip2])
 AM_MAINTAINER_MODE
 
@@ -35,5 +35,7 @@ AC_PROG_INSTALL
 PKG_CHECK_MODULES(XF86DGA, x11 xxf86dga)
 AC_SUBST(XF86DGA_CFLAGS)
 AC_SUBST(XF86DGA_LIBS)
+
+XORG_RELEASE_VERSION
 
 AC_OUTPUT([Makefile])
