Fix installed program name to match monolith (Donnie Berkholz)

--- a/Makefile.am
+++ b/Makefile.am
@@ -19,12 +19,12 @@
 #  TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
 #  PERFORMANCE OF THIS SOFTWARE.
 
-bin_PROGRAMS = xf86dga
+bin_PROGRAMS = dga
 
-xf86dga_CFLAGS = $(XF86DGA_CFLAGS)
-xf86dga_LDADD = $(XF86DGA_LIBS)
+dga_CFLAGS = $(XF86DGA_CFLAGS)
+dga_LDADD = $(XF86DGA_LIBS)
 
-xf86dga_SOURCES =	\
+dga_SOURCES =	\
         dga.c
 
 dist_man1_MANS = \
