Use sed to fill in variables in man page

--- a/configure.ac
+++ b/configure.ac
@@ -36,6 +36,7 @@ PKG_CHECK_MODULES(XF86DGA, x11 xxf86dga)
 AC_SUBST(XF86DGA_CFLAGS)
 AC_SUBST(XF86DGA_LIBS)
 
+XORG_MANPAGE_SECTIONS
 XORG_RELEASE_VERSION
 
 AC_OUTPUT([Makefile])
