Update pkgcheck depedencies to work with separate build roots.

--- a/configure.ac
+++ b/configure.ac
@@ -32,7 +32,7 @@ AC_PROG_CC
 AC_PROG_INSTALL
 
 # Checks for pkg-config packages
-PKG_CHECK_MODULES(XF86DGA, x11 xxf86dga)
+PKG_CHECK_MODULES(XF86DGA, x11 xxf86dga xt xaw7 xmu)
 AC_SUBST(XF86DGA_CFLAGS)
 AC_SUBST(XF86DGA_LIBS)
 
