include Xxf86dga.h instead of the deprecated xf86dga.h
Requires libXxf86dga 1.1.0 or newer for the new header.

Clears compiler warnings of:
"X11/extensions/xf86dga.h", line 9: #warning: "xf86dga.h is obsolete and may be removed in the future."
"X11/extensions/xf86dga.h", line 10: #warning: "include <X11/extensions/Xxf86dga.h> instead."

Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>

--- a/configure.ac
+++ b/configure.ac
@@ -39,6 +39,6 @@ XORG_MACROS_VERSION(1.8)
 XORG_DEFAULT_OPTIONS
 
 # Checks for pkg-config packages
-PKG_CHECK_MODULES(XF86DGA, x11 xxf86dga)
+PKG_CHECK_MODULES(XF86DGA, [x11 xxf86dga >= 1.1])
 
 AC_OUTPUT([Makefile])
